--- a/src/awebapp/templates/users/signup.html
+++ b/src/awebapp/templates/users/signup.html
@@ -11,7 +11,7 @@
   </head>
   <body>
   {% block content %}
-  <form method ="post">
+  <form id="form_sub" method ="post">
     {% csrf_token %}
     <div class="container text-center">
       <div class="top-header">
