--- a/src/awebapp/templates/awebapp/base.html
+++ b/src/awebapp/templates/awebapp/base.html
@@ -24,7 +24,7 @@
             <a class="nav-link" href="http://127.0.0.1:8000/awebapp/signup/">Inscrivez-vous maintenant !</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Connectez-vous</a>
+            <a class="nav-link" href="http://127.0.0.1:8000/awebapp/login/">Connectez-vous</a>
           </li>
         </ul>
         <form class="d-flex">
