new modifs + arrêt sur lazy load reference User

--- a/src/awebapp/templates/awebapp/homepage.html
+++ b/src/awebapp/templates/awebapp/homepage.html
@@ -42,7 +42,7 @@
             <div class="form-group">
                 <button type="submit" class="btn btn-primary btn-block">Créer mon compte</button>
             </div> <!-- form-group// -->      
-            <p class="text-center">Vous avez déjà un compte ?<a href=" ">Se connecter</a> </p>                                                                 
+            <p class="text-center">Vous avez déjà un compte ?<a href="http://127.0.0.1:8000/awebapp/login">Se connecter</a> </p>                                                                 
         </form>            
       </div>
     </div>
@@ -54,7 +54,7 @@
         <div>
           <h2>Inscrivez-vous</h2>
           <p>Cliquez sur le bouton pour vous inscrire</p>
-          <a href="http://127.0.0.1:8000/awebapp/signin" class="btn btn-primary">
+          <a href="http://127.0.0.1:8000/awebapp/signup" class="btn btn-primary">
             S'inscrire
           </a>
         </div>
