--- a/src/awebapp/templates/users/signup.html
+++ b/src/awebapp/templates/users/signup.html
@@ -27,7 +27,7 @@
         <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
       </svg>
       <label for="exampleInputEmail1" class="form-label">Votre adresse mail</label>
-      <input name="username" type="email" class="form-control" id="exampleInputEmail1">
+      <input name="email" type="email" class="form-control" id="exampleInputEmail1">
     </div>
     <div class="col">
       <i class="bi bi-key-fill"></i>
