--- a/src/awebapp/templates/users/login.html
+++ b/src/awebapp/templates/users/login.html
@@ -4,9 +4,38 @@
 {% block addcss %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-{% endblock %}
-
-
+    {% endblock %}
 {% block content %}
-TROP COOL
+<body>
+    <div class="row">
+        <div class="col d-flex align-items-start">
+          <div>
+            <h2>Connectez-vous</h2>
+            <form>
+                <div class="form-group input-group">
+                    {% csrf_token %}
+                  <div class="input-group-prepend">
+                 </div>
+                    <input type= "email" name="email" class="form-control" placeholder="Nom utilisateur">
+                </div> <!-- form-group// -->
+                <div class="form-group input-group">
+                  <div class="input-group-prepend">
+                </div>
+              </div> <!-- form-group end.// -->
+                <div class="form-group input-group">
+                  <div class="input-group-prepend">
+                </div>
+                    <input class="form-control" placeholder="Mot de passe" type="password">
+                </div> <!-- form-group// -->
+                <div class="form-group input-group">
+                  <div class="input-group-prepend">
+                </div>
+                </div> <!-- form-group// -->                                      
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary btn-block">Se connecter</button>
+            </form>            
+          </div>
+        </div>
+</body>
 {% endblock %}
+</html>
