user works without custom fields

--- a/src/awebapp/templates/users/login.html
+++ b/src/awebapp/templates/users/login.html
@@ -16,7 +16,7 @@
                     {% csrf_token %}
                   <div class="input-group-prepend">
                  </div>
-                    <input type= "email" name="email" class="form-control" placeholder="Nom utilisateur">
+                    <input type= "username" name="username" class="form-control" placeholder="Nom utilisateur">
                 </div> <!-- form-group// -->
                 <div class="form-group input-group">
                   <div class="input-group-prepend">
