form method post oublié, bug corrigé

--- a/src/awebapp/templates/users/login.html
+++ b/src/awebapp/templates/users/login.html
@@ -11,7 +11,7 @@
         <div class="col d-flex align-items-start">
           <div>
             <h2>Connectez-vous</h2>
-            <form>
+            <form id="form_login" method ="post">
                 <div class="form-group input-group">
                     {% csrf_token %}
                   <div class="input-group-prepend">
