bloqué bugredirection sans que le mdp soit rentré + login le meme user alors que je me co avec un autre

--- a/src/awebapp/templates/awebapp/homepage.html
+++ b/src/awebapp/templates/awebapp/homepage.html
@@ -20,7 +20,7 @@
     <div class="col d-flex align-items-start">
       <div>
         <h2>Connectez-vous</h2>
-        <form>
+        <form id="form_hp" method ="post">
             <div class="form-group input-group">
               <div class="input-group-prepend">
              </div>
@@ -33,7 +33,7 @@
             <div class="form-group input-group">
               <div class="input-group-prepend">
             </div>
-                <input class="form-control" placeholder="Mot de passe" type="password">
+                <input name="password" class="form-control" placeholder="Mot de passe" type="password">
             </div> <!-- form-group// -->
             <div class="form-group input-group">
               <div class="input-group-prepend">
