--- a/src/awebapp/templates/users/login.html
+++ b/src/awebapp/templates/users/login.html
@@ -25,7 +25,7 @@
                 <div class="form-group input-group">
                   <div class="input-group-prepend">
                 </div>
-                    <input class="form-control" placeholder="Mot de passe" type="password">
+                    <input type="password" name="password" class="form-control" placeholder="Mot de passe">
                 </div> <!-- form-group// -->
                 <div class="form-group input-group">
                   <div class="input-group-prepend">
