--- a/src/awebapp/templates/awebapp/baselog.html
+++ b/src/awebapp/templates/awebapp/baselog.html
@@ -20,6 +20,9 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/homepage/">Home</a>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/flux/">Flux</a>
+            <li class="nav-item">
           <li class="nav-item">
             <a class="nav-link" href="http://127.0.0.1:8000/awebapp/logout/">Se déconnecter</a>
           </li>
