--- a/src/awebapp/templates/awebapp/base.html
+++ b/src/awebapp/templates/awebapp/base.html
@@ -20,6 +20,14 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/homepage/">Home</a>
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/flux/">Flux</a>
+              <li class="nav-item">
+                <a class="nav-link" href="http://127.0.0.1:8000/awebapp/logout/">Se déconnecter</a>
+              </li>
+              {% endif %}
+            <li class="nav-item">
           <li class="nav-item">
             <a class="nav-link" href="http://127.0.0.1:8000/awebapp/signup/">Inscrivez-vous maintenant !</a>
           </li>
