--- a/src/awebapp/templates/awebapp/baselog.html
+++ b/src/awebapp/templates/awebapp/baselog.html
@@ -18,14 +18,13 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/homepage/">Home</a>
+            {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/flux/">Flux</a>
-            <li class="nav-item">
-          <li class="nav-item">
-            <a class="nav-link" href="http://127.0.0.1:8000/awebapp/logout/">Se déconnecter</a>
-          </li>
+              <li class="nav-item">
+                <a class="nav-link" href="http://127.0.0.1:8000/awebapp/logout/">Se déconnecter</a>
+              </li>
+              {% endif %}
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
