--- a/src/awebapp/templates/awebapp/base.html
+++ b/src/awebapp/templates/awebapp/base.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <body>
-  <nav id="base" class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav id="base" class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <a href="http://127.0.0.1:8000/awebapp/homepage/">
       <img src="https://user.oc-static.com/upload/2020/09/18/16004297044411_P7.png" class="rounded float-start" alt="LITReview logo">
