--- a/src/awebapp/templates/awebapp/homepage.html
+++ b/src/awebapp/templates/awebapp/homepage.html
@@ -11,13 +11,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
+    <link rel="stylesheet" type="text/css" href="{% static 'awebapp/homepage.css' %}">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>{% block title %}LITReview Accueil{% endblock %}</title>
   </head>
 <body>
+<div id="homepage" class="container">
   <div class="row">
-    <div class="col d-flex align-items-start">
+    <div class="col-md-6 col-md-offset-3">
       <div>
         <h2>Connectez-vous</h2>
         <form id="form_hp" method ="post">
@@ -46,17 +48,17 @@
         </form>            
       </div>
     </div>
-    <div class="col order-first">
-      <div class="col d-flex align-items-start">
-        <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
-        </div>
-        <div>
-          <h2>Inscrivez-vous</h2>
-          <p>Cliquez sur le bouton pour vous inscrire</p>
-          <a href="http://127.0.0.1:8000/awebapp/signup" class="btn btn-primary">
-            S'inscrire
-          </a>
+      <div class="col order-first">
+        <div class="col d-flex align-items-start">
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
+          </div>
+          <div>
+            <h2>Inscrivez-vous</h2>
+            <p>Cliquez sur le bouton pour vous inscrire</p>
+            <a href="http://127.0.0.1:8000/awebapp/signup" class="btn btn-primary">
+              S'inscrire
+            </a>
+          </div>
         </div>
       </div>
     </div>
