--- a/src/awebapp/templates/awebapp/homepage.html
+++ b/src/awebapp/templates/awebapp/homepage.html
@@ -17,7 +17,7 @@
   <title>{% block title %}LITReview Accueil{% endblock %}</title>
   </head>
 <body>
-<div id="homepage" class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <div>
