--- a/src/awebapp/templates/users/signup.html
+++ b/src/awebapp/templates/users/signup.html
@@ -19,35 +19,20 @@
     <p>Entrez vos informations pour votre création de compte LITReview</p>
     </div>
   </div>
-    <div class="container">
-    <div class="col">
-      <i class="bi bi-person-circle"></i>
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-      </svg>
-      <label for="exampleInputUsername1" class="form-label">Votre nom d'utilisateur</label>
-      <input name="username" type="username" class="form-control" id="exampleInputUsername1">
+    <div class="container mw w-50">
+    <div class="p-2 col">
+      <input name="username" type="username" class="form-control" placeholder="Nom utilisateur"  style="text-align: center" id="exampleInputUsername1">
     </div>
-    <div class="col">
-      <i class="bi bi-key-fill"></i>
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-key-fill" viewBox="0 0 16 16">
-        <path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2zM2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-      </svg>
-      <label for="password1" class="form-label">Mot de passe</label>
-      <input name="password" type="password" class="form-control" id="exampleInputPassword1">
+    <div class="p-2 col">
+      <input name="password" type="password" class="form-control" placeholder="Mot de passe"  style="text-align: center" id="exampleInputPassword1">
     </div>
-    <div class="col">
-      <i class="bi bi-key-fill"></i>
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-key-fill" viewBox="0 0 16 16">
-        <path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2zM2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-      </svg>
-      <label for="password1" class="form-label">Confirmez le mot de passe</label>
-      <input type="password" class="form-control" id="exampleInputPassword1">
+    <div class="p-2 col">
+      <input type="password" class="form-control" placeholder="Confirmez le mot de passe"  style="text-align: center" id="exampleInputPassword1">
     </div>
-    <button type="button" class="btn btn-row">
-      <a class="page-link" href="http://127.0.0.1:8000/awebapp/homepage/">Retour</a>
-    </button>
+    <div class="container" align="right">
+      <form>
+        <input class="btn btn-primary" type="button" value="Retour" onclick="history.back()">
+       </form>
     <button type="submt" class="btn btn-primary">S'inscrire</button>
     </div>
   </form>
