userfom modif pour password_confirm, fonctionnel

--- a/src/awebapp/templates/users/signup.html
+++ b/src/awebapp/templates/users/signup.html
@@ -24,10 +24,10 @@
       <input name="username" type="username" class="form-control" placeholder="Nom utilisateur"  style="text-align: center" id="exampleInputUsername1">
     </div>
     <div class="p-2 col">
-      <input name="password" type="password" class="form-control" placeholder="Mot de passe"  style="text-align: center" id="exampleInputPassword1">
+      <input name="password" type="password" class="form-control" placeholder="Mot de passe"  style="text-align: center" id="password">
     </div>
     <div class="p-2 col">
-      <input type="password" class="form-control" placeholder="Confirmez le mot de passe"  style="text-align: center" id="exampleInputPassword1">
+      <input name="password_confirm" type="password" class="form-control" placeholder="Confirmez le mot de passe"  style="text-align: center" id="password_confirm">
     </div>
     <div class="container" align="right">
       <form>
