--- a/src/awebapp/templates/awebapp/base.html
+++ b/src/awebapp/templates/awebapp/base.html
@@ -1,8 +1,10 @@
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=auto, initial-scale=1">
     <meta name="description" content="">
+    <link rel="stylesheet" type="text/css" href="{% static 'awebapp/base.css' %}">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <body>
@@ -14,11 +16,11 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/homepage/">Home</a>
-            {% if user.is_authenticated %}
             <li class="nav-item">
+              {% if user.is_authenticated %}
               <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/flux/">Flux</a>
               <li class="nav-item">
                 <a class="nav-link" href="http://127.0.0.1:8000/awebapp/logout/">Se déconnecter</a>
