--- a/src/awebapp/templates/awebapp/baselog.html
+++ b/src/awebapp/templates/awebapp/baselog.html
@@ -1,15 +1,14 @@
-<!doctype html>
-<html>
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=auto, initial-scale=1">
     <meta name="description" content="">
-
+    <link rel="stylesheet" type="text/css" href="{% static 'awebapp/belognav.css' %}">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <body>
-  <nav id="base" class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav id="baselog" class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <a href="http://127.0.0.1:8000/awebapp/homepage/">
       <img src="https://user.oc-static.com/upload/2020/09/18/16004297044411_P7.png" class="rounded float-start" alt="LITReview logo">
@@ -17,18 +16,20 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            {% if user.is_authenticated %}
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/flux/">Flux</a>
-              <li class="nav-item">
-                <a class="nav-link" href="http://127.0.0.1:8000/awebapp/logout/">Se déconnecter</a>
-              </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/posts/">Posts</a>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href ="http://127.0.0.1:8000/awebapp/logout">Se déconnecter</a>
+            </li>
               {% endif %}
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+        <form class="d-flex p-2">
+          <input class="form-control" type="search" placeholder="Rechercher une critique..." aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Rechercher</button>
         </form>
       </div>
     </div>
@@ -39,4 +40,3 @@
     </div>
 </body>
 </head>
-</html>
