apply style for login, signup, logout and up login form

--- a/src/awebapp/static/awebapp/base.css
+++ b/src/awebapp/static/awebapp/base.css
@@ -3,6 +3,13 @@ body nav {
     /*font-weight: bold;*/
 }
 
+body {
+    background-color: #ee5522;
+    background: white url("images/cool-background.png") no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+
 body .navbar-light .navbar-nav .nav-link.active {
     color: rgba(255, 255, 255, 0.9)!important;
 }
