--- a/src/awebapp/templates/users/login.html
+++ b/src/awebapp/templates/users/login.html
@@ -2,40 +2,48 @@
 {% extends "awebapp/base.html"%}
 {% load static %}
 {% block addcss %}
+<html>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    {% endblock %}
+{% endblock %}
 {% block content %}
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  </head>
 <body>
-    <div class="row">
-        <div class="col d-flex align-items-start">
-          <div>
-            <h2>Connectez-vous</h2>
-            <form id="form_login" method ="post">
-                <div class="form-group input-group">
-                    {% csrf_token %}
-                  <div class="input-group-prepend">
-                 </div>
-                    <input type= "username" name="username" class="form-control" placeholder="Nom utilisateur">
-                </div> <!-- form-group// -->
-                <div class="form-group input-group">
-                  <div class="input-group-prepend">
-                </div>
-              </div> <!-- form-group end.// -->
-                <div class="form-group input-group">
-                  <div class="input-group-prepend">
-                </div>
-                    <input type="password" name="password" class="form-control" placeholder="Mot de passe">
-                </div> <!-- form-group// -->
-                <div class="form-group input-group">
-                  <div class="input-group-prepend">
-                </div>
-                </div> <!-- form-group// -->                                      
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-block">Se connecter</button>
-            </form>            
+  <div class="container text-center mw w-25">
+      <div class= "col ms-3" align="center">
+        <h2>Connectez-vous</h2>
+        <form id="form_login" method ="post">
+            <div class="form-group input-group">
+                {% csrf_token %}
+              <div class="input-group-prepend p-2">
+              </div>
+                <input type= "username" name="username" class="form-control" placeholder="Nom utilisateur">
+            </div> <!-- form-group// -->
+            <div class="form-group input-group">
+              <div class="input-group-prepend p-2">
+            </div>
+        </div> <!-- form-group end.// -->
+          <div class="form-group input-group">
+            <div class="input-group-prepend p-2">
           </div>
-        </div>
+              <input type="password" name="password" class="form-control" placeholder="Mot de passe">
+          </div> <!-- form-group// -->
+          <div class="form-group input-group">
+            <div class="input-group-prepend">
+          </div>
+          </div> <!-- form-group// -->                                      
+          <div class="form-group p-2">
+            <button type="submit" class="btn btn-primary btn-block">Se connecter</button>
+      </form>            
+    </div>
+  </div>
 </body>
 {% endblock %}
 </html>
