--- a/src/awebapp/templates/awebapp/baselog.html
+++ b/src/awebapp/templates/awebapp/baselog.html
@@ -18,19 +18,19 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href ="http://127.0.0.1:8000/awebapp/logout">Se déconnecter</a>
+          </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/flux/">Flux</a>
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/posts/">Posts</a>
+            </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href ="http://127.0.0.1:8000/awebapp/logout">Se déconnecter</a>
+              <a class="nav-link active" aria-current="page" href ="http://127.0.0.1:8000/awebapp/abos">Abonnements</a>
             </li>
               {% endif %}
         </ul>
-        <form class="d-flex p-2">
-          <input class="form-control" type="search" placeholder="Rechercher une critique..." aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Rechercher</button>
-        </form>
       </div>
     </div>
   </nav>
