--- a/src/awebapp/templates/reviews/abos.html
+++ b/src/awebapp/templates/reviews/abos.html
@@ -12,18 +12,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <link rel="stylesheet" type="text/css" href="{% static 'awebapp/belognav.css' %}">
-    <!-- Bootstrap CSS -->
+    <!-- mon css fonctionne pas... -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>{% block title %}LITReview Abonnements{% endblock %}</title>
   </head>
 <body>
     <main role="main" class="container">
         <div class="row">
-          <div class="col-md-3">    
-         <title>
-             Suivre d'autres utilisateurs        
-         </title>
-      </main>
-    </body>
-    </html>
-    {% endblock %}
+          <div class="col-ms-3" align="center">    
+            <h4>Suivre d'autres utilisateurs</h4>
+            <form method="post">
+                {% csrf_token %}
+                <div class="row" style="margin-left: 600px">
+                    <input name="username_search" id="username_search" placeholder="Nom d'utilisateur">
+                    <button id="button_search" class="btn btn-large btn-primary">Envoyer</button>
+                </div>
+            </form>
+        </div>
+    <div>
+        <h4>Abonnements</h4>
+        {% for followed_by in followed_user %}
+            <div class="row">
+                <div style="border: 1px solid black; margin-left: 50px; width: 1200px">
+                    <h5 style="text-align: left">{{ followed_by.followed_user }}</h5>
+                </div>
+                <form method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="followed_user" value="{{ followed_by.followed_user.id }}">
+                    <button class="btn btn-large btn-primary">Se désabonner</button>
+                </form>
+            </div>
+        {% endfor %}
+    </div>
+
+    <div>
+        <h4>Abonnés</h4>
+        {% for followed_user in followed_by %}
+            <div style="border: 1px solid black; margin-left: 40px; width: 1200px">
+                <h5 style="text-align: left">{{ followed_by.user }}</h5>
+            </div>
+        {% endfor %}
+    </div>
+</div>
+</html>
+</body>
+{% endblock %}
