--- a/src/awebapp/templates/reviews/flux.html
+++ b/src/awebapp/templates/reviews/flux.html
@@ -20,22 +20,27 @@
   <main role="main" class="container">
     <div class="row justify-content-md-center">
         <div class="col col-lg-3">
-            <a class="btn btn-lg btn-primary" href="#" role="button">Demander une critique</a>
+            <a class="btn btn-lg btn-primary" href="http://127.0.0.1:8000/awebapp/create-ticket" role="button">Demander une critique</a>
         </div>
         <div class="col-md-auto">
-            <a class="btn btn-lg btn-primary" href="#" role="button">Créer une critique</a>        
+            <a class="btn btn-lg btn-primary" href="http://127.0.0.1:8000/awebapp/create-review" role="button">Créer une critique</a>        
         </div>
         </div>
-        <!--Premier bloc avec une critique publiée de l'utilisateur connecté-->
-    <div class="my-3 p-3 bg-white rounded box-shadow">
-        <h6 class="border-bottom border-gray pb-2 mb-0">Vous avez publié une critique</h6>
-        <div class="media text-muted pt-3">
-          <p class="media-body pb-3 mb-3 small lh-125 border-bottom border-black">__</p>
-        </div>
-        <small class="d-block text-right mt-3">
-        <a href="#">click</a>
-        </small>
-    </div>
+        <!-- Premier bloc avec une critique publiée de l'utilisateur connecté
+                    
+        - for ticket in tickets-
+            - if ticket.review.exists -
+            - else -->
+
+            <div class="my-3 p-3 bg-white rounded box-shadow">
+                <h6 class="border-bottom border-gray pb-2 mb-0">Vous avez publié une critique</h6>
+                <div class="media text-muted pt-3">
+                <p class="media-body pb-3 mb-3 small lh-125 border-bottom border-black">__</p>
+                </div>
+                <small class="d-block text-right mt-3">
+                <a href="#">click</a>   
+                </small>
+            </div>
         <!--Second bloc avec une demande de critique d'un autre user-->
     <div class="my-3 p-3 bg-white rounded box-shadow">
         <h6 class="border-bottom border-gray pb-2 mb-0">user a demandé une critique + ajouter date de la publication</h6>
@@ -66,4 +71,3 @@
 </body>
 </html>
 {% endblock %}
-
