--- a/src/awebapp/templates/reviews/posts.html
+++ b/src/awebapp/templates/reviews/posts.html
@@ -6,7 +6,55 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 {% endblock %}
 {% block content %}
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <link rel="stylesheet" type="text/css" href="{% static 'awebapp/white.css' %}">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <title>{% block title %}LITReview Flux{% endblock %}</title>
+  </head>
+<body>
+  <main role="main" class="container">
 
-<div class="feed text-center">
-    <p>Salut l'user sur la page des posts  {{ request.user }}</p>
+    {% block body %}
+    <h1 style="text-align: center">Vos posts</h1>
+
+    <div style="border: 2px solid white; margin: 20px">
+        {% for ticket in tickets %}
+            <div>
+                Vous avez publié un ticket<br>
+                {{ ticket.title }}<br>
+                {{ ticket.description }}<br>
+                <img src="{{ ticket.image.url }}" widht="200px" height="200px"><br>
+                {{ ticket.time_created }}<br>
+                <a href={% url 'update-ticket' ticket_id=ticket.id %}><button>Modifier le ticket</button></a>
+            </div>
+            <br><hr>
+        {% endfor %}
+        <br><hr><br>
+        {% for review in reviews %}
+            <div style="border: 2px solid white;">
+                Vous avez publié une critique<br>
+                {{ review.headline }}<br>
+                {{ review.body }}<br>
+                {{ review.rating }}<br>
+                {{ review.time_created }}<br>
+                <div style="border: 2px solid white; margin: 30px">
+                    Ticket - Vous
+                    {{ review.ticket.title }}<br>
+                    {{ review.ticket.description }}<br>
+                    <img src="{{ review.ticket.image.url }}" widht="200px" height="200px"><br>
+                    {{ review.ticket.time_created }}<br>
+                <a href={% url 'update-review' review_id=review.id %}><button>Modifier la critique</button></a>
+                </div>
+            </div>
+            <hr>
+        {% endfor %}
+    </div>
+{% endblock %}
+</body>
+</html>
 {% endblock %}
