--- a/src/awebapp/templates/reviews/reviews.html
+++ b/src/awebapp/templates/reviews/reviews.html
@@ -5,6 +5,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 {% endblock %}
+<main role="main" class="container">
 
-
+    {% block body %}
+        <h1 style="text-align: center">Critiques</h1>
+                <div style="border: 2px solid white;">
+                    Critique exemple<br>
+                    {{ review.headline }}<br>
+                    {{ review.body }}<br>
+                    {{ review.rating }}<br>
+                    {{ review.time_created }}<br>
+                    <div style="border: 2px solid white; margin: 30px">
+                        Ticket - Vous
+                        {{ review.ticket.title }}<br>
+                        {{ review.ticket.description }}<br>
+                        <img src="{{ review.ticket.image.url }}" widht="200px" height="200px"><br>
+                        {{ review.ticket.time_created }}<br>
+                    <button>Modifier la critique</button></a>
+                    </div>
+                </div>
+                <hr>
+        </div>
 {% block content %}
