--- a/src/awebapp/templates/reviews/create-ticket.html
+++ b/src/awebapp/templates/reviews/create-ticket.html
@@ -25,15 +25,15 @@
         {% csrf_token %}
         <div class="form-group">
           <label for="title"><h5>Titre</h5></label>
-          <input type="title" class="form-control" id="title" placeholder="Saisissez le titre de votre ticket">
+          <input value="{{ form_ticket.title }}" type="title" class="form-control" id="title" placeholder="Saisissez le titre de votre ticket">
         </div>
         <div class="form-group">
           <label for="description"><h5>Description</h5></label>
-          <textarea class="form-control" id="description"></textarea>
+          <textarea value="{{ form_ticket.description }}"class="form-control" id="description"></textarea>
         </div>  
         <div class="custom-file">
-            <input type="file" class="custom-file-input" id="image">
-            <label class="custom-file-label" for="customFile">Choose file</label>
+            <input type="hidden" value="{{ form_ticket.user }}">
+            <input value="{{ form_ticket.image }}" type="file" class="custom-file-input" id="image">
           </div>
         <button class="btn btn-primary">Envoyer</button>
       </form>
