--- a/src/awebapp/static/awebapp/white.css
+++ b/src/awebapp/static/awebapp/white.css
@@ -1,4 +1,4 @@
-body {
+body.main {
     background-color: #ee5522;
     background: white url("images/cool-posts.png") no-repeat!important;
     background-attachment: fixed;
