--- a/src/awebapp/templates/reviews/flux.html
+++ b/src/awebapp/templates/reviews/flux.html
@@ -12,7 +12,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <link rel="stylesheet" type="text/css" href="{% static 'awebapp/belognav.css' %}"> 
-    <!-- <link rel="stylesheet" type="text/css" href="{% static 'awebapp/flux.css'%}"> -->
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>{% block title %}LITReview Flux{% endblock %}</title>
@@ -27,12 +26,15 @@
             <a class="btn btn-lg btn-primary" href="http://127.0.0.1:8000/awebapp/create-review" role="button">Créer une critique</a>        
         </div>
         {% for ticket in tickets %}
+        <div class="row justify-content-md-center">
             <div style="border: 2px solid white; padding: 5px">
                 Vous avez publié un ticket
                 {{ ticket.title }}<br>
                 {{ ticket.description }}<br>
                 {{ ticket.user }}<br>
-                <img src="{% static 'images/'%}"><br>
+                <img src="{{ ticket.image }}">
+              </div>
+            </div>
         {% endfor %}
         </div>                    
     </div>
@@ -41,3 +43,4 @@
 </body>
 </html>
 {% endblock %}
+
