--- a/src/awebapp/templates/reviews/create-review.html
+++ b/src/awebapp/templates/reviews/create-review.html
@@ -1,3 +1,4 @@
+<!--Page des critiques-->
 <!doctype html>
 {% extends "awebapp/baselog.html"%}
 {% load static %}
@@ -14,12 +15,11 @@
     <link rel="stylesheet" type="text/css" href="{% static 'awebapp/belognav.css' %}">
     <!-- mon css fonctionne pas... -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <title>{% block title %}LITReview Abonnements{% endblock %}</title>
+  <title>{% block title %}LITReview critiques{% endblock %}</title>
   </head>
 <div style="border: 2px solid white; margin: 20px">
     <h4 style="text-align: center">Créer une critique</h4>
     <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
         <div class="form-group">
             <div style="border: 2px solid white; margin: 20px">
             <div class="col-md-2 col-sm-2">
@@ -44,7 +44,7 @@
           <label for="title"><h5>Titre</h5></label>
           <input value="{{ form_review.headline }}" type="title" class="form-control" id="title">
         </div>
-        <div class="form-check form-check-inline">
+        <div id="rating" name="rating" class="form-check form-check-inline">
             <div class="col-md-2 col-sm-2">
                 <h5>Note</h5>
             </div>
@@ -71,6 +71,7 @@
             <label for="description" id="commentairereview"><h5>Commentaire</h5></label>
             <textarea class="form-control" id="commentairereview"></textarea>
           </div>
+          {% csrf_token %}
         <button class="btn btn-primary">Envoyer</button>
       </form>
 </div>
