--- a/src/awebapp/templates/reviews/update-ticket.html
+++ b/src/awebapp/templates/reviews/update-ticket.html
@@ -11,12 +11,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <link rel="stylesheet" type="text/css" href="{% static 'awebapp/belognav.css' %}">
-    <!-- mon css fonctionne pas... -->
+    <link rel="stylesheet" type="text/css" href="{% static 'awebapp/white.css' %}">
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <title>{% block title %}LITReview Abonnements{% endblock %}</title>
+  <title>{% block title %}LITReview modif ticket{% endblock %}</title>
   </head>
-  
+<body>
+  <main role="main" class="container">
+    <div class="row" align="center">
+        <h2> Mettre à jour un ticket </h2>
+    </div>
+   
 {% block body %}
 <h4 style="text-align: center">Modifier votre ticket</h4>
 <form method="post" enctype="multipart/form-data">
@@ -42,3 +47,5 @@
     </div>
 </form>
 {% endblock %}
+</body>
+</html>
