--- a/src/awebapp/templates/reviews/update-review.html
+++ b/src/awebapp/templates/reviews/update-review.html
@@ -15,32 +15,37 @@
     <!-- mon css fonctionne pas... -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>{% block title %}LITReview Abonnements{% endblock %}</title>
-  </head>
-{% block body %}
-<h4 style="text-align: center">Modifier votre critique</h4>
-<div style="border: 2px solid black; margin: 20px">
-    <div>
-        <h5>Vous êtes en train de poster en réponse à:</h5>
-        <div style="border: 2px solid black; margin: 30px">
-            {{ review.ticket.user }} a demandé une critique<br>
-            {{ review.ticket.title }}<br>
-            {{ review.ticket.description }}<br>
-            <img src="{{ review.ticket.image.url }}" widht="200px" height="200px"><br>
-        </div>
-    </div>
-    <br><hr><br>
-    <form method="post">
+</head>
+<body>
+    <main role="main" class="container">
+      <div class="row" align="center">
+    <h4 style="text-align: center">Modifier votre critique</h4>
+    <div style="border: 2px solid black; margin: 20px">
         <div>
-            <div>
-                Titre: {{ form_review.headline }}<br>
-                Commentaire: {{ form_review.body }}<br>
-                Note: {{ form_review.rating }}<br>
-                {{ form_review.ticket.as_hidden }}
-                {{ form_review.user.as_hidden }}
+            <h5>Vous êtes en train de poster en réponse à:</h5>
+            <div style="border: 2px solid black; margin: 30px">
+                {{ review.ticket.user }} a demandé une critique<br>
+                {{ review.ticket.title }}<br>
+                {{ review.ticket.description }}<br>
+                <img src="{{ review.ticket.image.url }}" widht="200px" height="200px"><br>
             </div>
-            {% csrf_token %}
-            <button>Envoyer</button>
         </div>
-    </form>
-</div>
+        <br><hr><br>
+        <form name="update-review" method="post">
+            <div>
+                <div>
+                <label>Titre</label><input name="title">
+                
+                </div>
+                {% csrf_token %}
+                <button>Modifier</button>
+            </div>
+        </form>
+        <form method="post" name="delete">
+            <div class="form-group">
+                <input type="hidden" name="delete" value="delete">
+                <button class="btn btn-primary" type="submit">Delete</button>
+            </div>
+        </form>
+    </div>
 {% endblock %}
