--- a/src/awebapp/templates/reviews/update-ticket.html
+++ b/src/awebapp/templates/reviews/update-ticket.html
@@ -11,41 +11,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <link rel="stylesheet" type="text/css" href="{% static 'awebapp/white.css' %}">
-    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="{% static 'awebapp/belognav.css' %}">
+    <!-- mon css fonctionne pas... -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <title>{% block title %}LITReview modif ticket{% endblock %}</title>
-  </head>
+  <title>{% block title %}LITReview ticket update{% endblock %}</title>
+</head>
 <body>
-  <main role="main" class="container">
-    <div class="row" align="center">
-        <h2> Mettre à jour un ticket </h2>
-    </div>
-   
-{% block body %}
-<h4 style="text-align: center">Modifier votre ticket</h4>
-<form method="post" enctype="multipart/form-data">
-    <div>
+    <main role="main" class="container">
+      <div class="row" align="center">
+    <h4 style="text-align: center">Modifier votre ticket</h4>
+    <div style="border: 2px solid black; margin: 20px">
         <div>
-            <h5>Titre</h5>
-            <div style="border: 1px solid black; margin-left: 50px; width: 1200px">
-                <h5 style="text-align: left">{{ form_ticket.title }}</h5>
+            <h5>Vous êtes en train de poster en réponse à:</h5>
+            <div style="border: 1px solid white; margin: 30px">
+                {{ ticket.user }} a demandé une critique<br>
+                {{ ticket.title }}<br>
+                {{ ticket.description }}<br>
+                <img src="{{ review.ticket.image.url }}" widht="200px" height="200px"><br>
             </div>
-            <h5>Description</h5>
-            <div style="border: 1px solid black; margin-left: 50px; width: 1200px">
-                {{ form_ticket.description }}
-            </div>
-            <br>
-            <img src="{{ ticket.image.url }}" widht="200px" height="200px"><br>
-            {{ form_ticket.image }}
-            {{ form_ticket.user.as_hidden }}
         </div>
+        <br><hr><br>
+        <form name="update-ticket" method="post">
+            <div>
+                <label>Titre</label><input name="title"><br>
+                <label>Description</label><input name="description"><br>
+                </div>
+                {% csrf_token %}
+                <button>Modifier</button>
+            </div>
+        </form>
+        <form method="post" name="delete">
+            <div class="form-group">
+                <input type="hidden" name="delete" value="delete">
+                <button class="btn btn-primary" type="submit">Delete</button>
+            </div>
+        </form>
     </div>
-    <div>
-        {% csrf_token %}
-        <button class="btn btn-primary">Envoyer</button>
-    </div>
-</form>
 {% endblock %}
-</body>
-</html>
