--- a/src/awebapp/templates/reviews/posts.html
+++ b/src/awebapp/templates/reviews/posts.html
@@ -18,21 +18,38 @@
   </head>
 <body>
   <main role="main" class="container">
-      {% for ticket in tickets %}
-      <div class="row justify-content-md-center">
-          <div style="border: 2px solid white; padding: 5px">
-              Vous avez publié un ticket<br>
-              {{ ticket.title }}<br>
-              {{ ticket.description }}<br>
-              {{ ticket.user }}<br>
-              <img src="{{ ticket.image }}">
-            </div>
-          </div>
-          <div class="col-md-3">
-            <a class="btn btn-lg btn-primary" href="http://127.0.0.1:8000/awebapp/update-ticket/{{ ticket.id }}" role="button">modif ticket</a>
-          </div>
-      {% endfor %}
-    </div>
-</body>
+        <h1 style="text-align: center">Vos posts</h1>
+        <div style="border: 2px solid black; margin: 20px">
+            {% for ticket in tickets %}
+                <div>
+                    Vous avez publié un ticket<br>
+                    {{ ticket.title }}<br>
+                    {{ ticket.description }}<br>
+                    <img src="{{ ticket.image.url }}" widht="200px" height="200px"><br>
+                    {{ ticket.time_created }}<br>
+                    <a href="http://127.0.0.1:8000/awebapp/update-ticket/{{ ticket.id }}"><button>Modifier le ticket</button></a>
+                </div>
+                <br>
+            {% endfor %}
+            <br><br>
+            {% for review in reviews %}
+                <div style="border: 2px solid black;">
+                    Vous avez publié une critique<br>
+                    {{ review.headline }}<br>
+                    {{ review.body }}<br>
+                    {{ review.rating }}<br>
+                    {{ review.time_created }}<br>
+                    <div style="border: 2px solid black; margin: 30px">
+                        Ticket - Vous
+                        {{ review.ticket.title }}<br>
+                        {{ review.ticket.description }}<br>
+                        <img src="{{ review.ticket.image.url }}" widht="200px" height="200px"><br>
+                        {{ review.ticket.time_created }}<br>
+                        <a href="http://127.0.0.1:8000/awebapp/update-review/{{ ticket.id }}"><button>Modifier la critique</button></a>
+                    </div>
+                </div>
+                {% endfor %}
+        </div>
+  </body>
 </html>
 {% endblock %}
